--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <title>個別指導塾Growy公式サイト</title>
   </head>
   <body>
