--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>個別指導塾Growy公式サイト</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
+    
+    <!--フォント設定後でする-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP:wght@500;600&family=Kosugi&family=M+PLUS+2&family=Noto+Sans+JP:wght@400;700;800;900&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.（このサイトの閲覧には、JavaScriptをオンにする必要があります）</noscript>
