--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="個別指導塾Growy公式サイト"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -29,7 +29,7 @@
       rel="stylesheet">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.（このサイトの閲覧には、JavaScriptをオンにする必要があります）</noscript>
+    <noscript>You need to enable JavaScript to run this app.（このサイトの閲覧には、JavaScriptをオンにする必要があります。）</noscript>
     <div id="root"></div>
   </body>
 </html>
