--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="個別指導塾Growy公式サイト"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,7 +19,6 @@
     <title>個別指導塾Growy公式サイト</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     
     <!--フォント設定後でする-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
