LP feature deleted

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="個別指導塾Growy公式サイト"
+      content="個別指導塾Growyメンバーズサイト"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
     <!--
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>個別指導塾Growy公式サイト</title>
+    <title>個別指導塾Growyメンバーズサイト</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
     
